objects/JS_Time_Sheet__c/JS_Time_Sheet__c.object-meta.xml
<CustomObject>
    <label>Old Timesheet</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Time Sheet Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Old Timesheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>