objects/JS_Time_Sheet__c/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Code</label>
    <referenceTo>GL_Code__c</referenceTo>
    <relationshipName>Job_Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>