objects/JS_Time_Sheet__c/fields/Remaining_Hours__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Hours__c</fullName>
    <formula>Estimated_Hours__c  -  Total_Hours_Worked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>