objects/JS_Time_Sheet__c/fields/Total_Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Worked__c</fullName>
    <label>Total Hours Worked</label>
    <summarizedField>JS_TS_Details__c.Hours_Worked__c</summarizedField>
    <summaryForeignKey>JS_TS_Details__c.Job_Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>