objects/JS_Time_Sheet__c/validationRules/ValidationForEstimatedHrsEdit.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidationForEstimatedHrsEdit</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED( Estimated_Hours__c )</errorConditionFormula>
    <errorMessage>You cannot change estimated hours.</errorMessage>
</ValidationRule>