objects/JS_Time_Sheet__c/validationRules/ValidationForGLCodeEdit.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidationForGLCodeEdit</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( GL_Code__c )</errorConditionFormula>
    <errorMessage>You cannot change GL Code.</errorMessage>
</ValidationRule>