objects/JS_Time_Sheet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Job__c</columns>
    <columns>GL_Code__c</columns>
    <columns>Estimated_Hours__c</columns>
    <columns>Total_Hours_Worked__c</columns>
    <columns>Remaining_Hours__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>